Redo after review comments.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,6 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textAllCaps">true</item>
         <item name="android:textSize">16sp</item>
-        <item name="android:paddingBottom">16sp</item>
+        <item name="android:paddingBottom">16dp</item>
     </style>
 </resources>
